# Vroom

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cmake/: Findglad.cmake
rsrc/: low_poly_blendered.mtl  low_poly_car.mtl  skybox.glb
rsrc/shaders/: basic.f.glsl  basic.v.glsl  basic_pbr.f.glsl  basic_pbr.v.glsl  deferred_pbr.f.glsl  deferred_pbr.v.glsl  flat.f.glsl  flat.v.glsl  fxaa.f.glsl  fxaa.v.glsl  light_pbr.f.glsl  light_pbr.v.glsl
rsrc/shaders/bone_animation/: basic_pbr_bone_animation.v.glsl
rsrc/shaders/skinned/: basic_pbr_skinned.f.glsl  basic_pbr_skinned.v.glsl  deferred_pbr_skinned.f.glsl  deferred_pbr_skinned.v.glsl
rsrc/shaders/test/: test_lightAlbedo.f.glsl  test_lightAlbedo.v.glsl  test_lightMetallic.f.glsl  test_lightNormal.f.glsl  test_lightPosition.f.glsl  test_lightPosition.v.glsl  test_lightRoughness.f.glsl
rsrc/skelly/: skelly.gltf  skelly.mtl
src/: CMakeLists.txt  Constants.hpp  Game.cpp  Game.hpp  Log.cpp  Log.hpp  Renderer.cpp  Renderer.hpp  RenderingSystem.cpp  RenderingSystem.hpp  getopt.h  main.cpp
src/Components/: AnimationComp.hpp  CameraInfoComp.hpp  CameraLensComp.hpp  FrictionComp.hpp  GravityComp.hpp  LightComp.hpp  MotionComp.hpp  PhysicsComp.hpp  PositionComp.hpp  RenderableComp.hpp  SoundComp.hpp  TempComp.hpp
src/Entities/: CameraEntity.cpp  CameraEntity.hpp  CarEntity.cpp  CarEntity.hpp  Entity.hpp  EntityFilter.hpp  EntityRegistry.hpp  LightEntity.cpp  LightEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  PropEntity.cpp  PropEntity.hpp  SkyboxEntity.cpp  SkyboxEntity.hpp  TempEntity.cpp  TempEntity.hpp
src/Systems/: AnimationSys.cpp  AnimationSys.hpp  AudioSys.cpp  AudioSys.hpp  EventSys.cpp  EventSys.hpp  GameSys.cpp  GameSys.hpp  GameplaySys.cpp  GameplaySys.hpp  InputSys.cpp  InputSys.hpp  PhysicsSys.cpp  PhysicsSys.hpp  RenderingSys.cpp  RenderingSys.hpp  ResourceSys.cpp  ResourceSys.hpp  System.hpp  SystemEntities.hpp  UISys.cpp  UISys.hpp
src/Systems/ResourceSys/: AnimationResource.cpp  AnimationResource.hpp  AudioResource.cpp  AudioResource.hpp  ObjResource.cpp  ObjResource.hpp  Resource.hpp  ResourceSys.cpp  ResourceSys.hpp  ShaderResource.cpp  ShaderResource.hpp
src/Utils/: FileUtils.cpp  FileUtils.hpp  Identifiable.hpp  LinkerUtils.cpp  MathUtils.hpp  StringIndexor.hpp  TupleUtils.hpp
