cmake_minimum_required (VERSION 3.15)
project(VROOM)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

set(RESOURCE_DIR_NAME rsrc)
set(RESOURCE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${RESOURCE_DIR_NAME})
if(WIN32)
    # Add Debug/ or Release/ subdirectory based on build type
    set(RESOURCE_DEST_DIR
        ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/$<CONFIG>/${RESOURCE_DIR_NAME})
else()
    set(RESOURCE_DEST_DIR
        ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${RESOURCE_DIR_NAME})
endif()

add_subdirectory(src)
